# venhapararecomb-backend

./: .dockerignore  .envExemple  .gitIgnore  .gitignore  .pre-commit-config.yaml  32211207872718000117550010000217781877120005-nfe.xml  Database.py  Dockerfile  Documentacao.md  NFe-002-3103.xml  NotaFiscal.py  Procfile  README.md  Readme.md  alembic.ini  app.py  build.gradle  config.py  create-container.sh  criar_banco.py  database.db  database.py  database_utils.py  desafioRecomb.ipynb  docker-compose.yaml  docker-compose.yml  documentacao.txt  home.html  index.html  main.py  makefile  my-test.db  package.json  parser.py  parsing.py  pyproject.toml  readme.md  requirements.txt  run.py  runtime.txt  (+8 more)
.github/workflows/: documentation.yml  (+1 more)
Desafio-Recomb/: README.md  data.csv  main.py  read_nf.py  write_csv.py
NFes/: 32211207872718000117550010000217781877120005-nfe.xml
api/: .gitignore  README.md  package.json
app/: __init__.py  main.py  router.py  routes.py
db/: schema.sql
front_ler_xml/: .gitignore  README.md  package.json
in_xml/: NFe-002-3103.xml
instance/: database.db
recomb/: __init__.py  forms.py  models.py  routes.py
schemas/: schemas.py
src/: database.py  models.py  parsing.py  service.py
templates/: base.html  home.html  index.html
test/: run_test.py
testes/: nfe.xml  nfe_cliente_pf.xml  nfe_erro_cli_sem_nome.xml  nfe_erro_end_cli_incompleto.xml  nfe_erro_sem_CNPJ_cli.xml  teste.xml  teste2.xml
uploads/: 32211207872718000117550010000217781877120005-nfe.xml  NFe-002-3103.xml
venhapararecomb/: Dockerfile  db.sqlite3  main.py  manage.py
(+132 files in other folders)
