[tool.poetry]
name = "venhapararecomb"
version = "0.1.0"
description = "internship selection project, read and present: values and Expiration date of the slips present in an invoice according to a supplier's CPF or CNPJ, and present the name, identifier (CPF or CNPJ), address of a supplier's customers."
authors = ["alexandrejastrow <alexandre.jastrow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.0.3"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
